auto-test/tests/chapter_18/invalid_parse/var_decl_missing_struct_kw.c
int main(void) {
    struct x;
    x y;  
          
    return 0;
}